--- a/Chat/Pages/ChatRoom.cshtml
+++ b/Chat/Pages/ChatRoom.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Chat.Shared.Helpers
 @model Chat.Pages.ChatRoomModel
 
 @Html.AntiForgeryToken()
@@ -25,7 +26,7 @@
         <ul id="messagesList">
             @foreach (var message in Model.ChatRoomMessages)
             {
-                <li>@(message.UserName + " says: " + message.Message)</li>
+                <li>@(ChatMessageBuilder.FormatMessage(message.Message, message.Created, false, message.UserName))</li>
             }
         </ul>
     </div>
